--- a/Raycaster/Raycaster.vcxproj.filters
+++ b/Raycaster/Raycaster.vcxproj.filters
@@ -13,6 +13,12 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Resource Files\imgui">
+      <UniqueIdentifier>{ffcb1ea7-b616-4f5e-803c-265df389a4fd}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Resource Files\imgui\backend">
+      <UniqueIdentifier>{930d5b5a-8f5e-4f3b-b3c3-fadeb501b772}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -54,6 +60,27 @@
     <ClCompile Include="LevelFileSystem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\External Libraries\imgui\imgui.cpp">
+      <Filter>Resource Files\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="..\External Libraries\imgui\imgui_demo.cpp">
+      <Filter>Resource Files\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="..\External Libraries\imgui\imgui_draw.cpp">
+      <Filter>Resource Files\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="..\External Libraries\imgui\imgui_tables.cpp">
+      <Filter>Resource Files\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="..\External Libraries\imgui\imgui_widgets.cpp">
+      <Filter>Resource Files\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="..\External Libraries\imgui\backend\imgui_impl_sdl2.cpp">
+      <Filter>Resource Files\imgui\backend</Filter>
+    </ClCompile>
+    <ClCompile Include="..\External Libraries\imgui\backend\imgui_impl_sdlrenderer2.cpp">
+      <Filter>Resource Files\imgui\backend</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -94,6 +121,30 @@
     </ClInclude>
     <ClInclude Include="LevelFileSystem.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\External Libraries\imgui\imconfig.h">
+      <Filter>Resource Files\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="..\External Libraries\imgui\imgui.h">
+      <Filter>Resource Files\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="..\External Libraries\imgui\imgui_internal.h">
+      <Filter>Resource Files\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="..\External Libraries\imgui\imstb_rectpack.h">
+      <Filter>Resource Files\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="..\External Libraries\imgui\imstb_textedit.h">
+      <Filter>Resource Files\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="..\External Libraries\imgui\imstb_truetype.h">
+      <Filter>Resource Files\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="..\External Libraries\imgui\backend\imgui_impl_sdl2.h">
+      <Filter>Resource Files\imgui\backend</Filter>
+    </ClInclude>
+    <ClInclude Include="..\External Libraries\imgui\backend\imgui_impl_sdlrenderer2.h">
+      <Filter>Resource Files\imgui\backend</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
