--- a/Raycaster/Raycaster.vcxproj.filters
+++ b/Raycaster/Raycaster.vcxproj.filters
@@ -57,9 +57,6 @@
     <ClCompile Include="TempMap.h">
       <Filter>Header Files</Filter>
     </ClCompile>
-    <ClCompile Include="LevelFileSystem.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\External Libraries\imgui\imgui.cpp">
       <Filter>Resource Files\imgui</Filter>
     </ClCompile>
@@ -82,6 +79,9 @@
       <Filter>Resource Files\imgui\backend</Filter>
     </ClCompile>
     <ClCompile Include="UIWrapper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LMap.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -122,9 +122,6 @@
     <ClInclude Include="Player.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="LevelFileSystem.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\External Libraries\imgui\imconfig.h">
       <Filter>Resource Files\imgui</Filter>
     </ClInclude>
@@ -150,6 +147,9 @@
       <Filter>Resource Files\imgui\backend</Filter>
     </ClInclude>
     <ClInclude Include="UIWrapper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LMap.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
