[Raycst-14] File Dialog Display

--- a/Raycaster/imgui.ini
+++ b/Raycaster/imgui.ini
@@ -28,3 +28,18 @@ Pos=114,11
 Size=153,79
 Collapsed=0
 
+[Window][file browser##filebrowser_140695761153360]
+Pos=4,15
+Size=630,450
+Collapsed=0
+
+[Window][file browser##filebrowser_140695813578064]
+Pos=-30,15
+Size=700,450
+Collapsed=0
+
+[Window][file browser##filebrowser_140700574506320]
+Pos=-30,15
+Size=700,450
+Collapsed=0
+
