[Raycst-14] Decoupled UIWrapper From Main

--- a/Raycaster/imgui.ini
+++ b/Raycaster/imgui.ini
@@ -43,3 +43,8 @@ Pos=-30,15
 Size=700,450
 Collapsed=0
 
+[Window][file browser##filebrowser_140701045054800]
+Pos=-30,15
+Size=700,450
+Collapsed=0
+
