[Raycst-14] Tidy Up

--- a/Raycaster/imgui.ini
+++ b/Raycaster/imgui.ini
@@ -48,3 +48,13 @@ Pos=-30,15
 Size=700,450
 Collapsed=0
 
+[Window][file browser##filebrowser_2515541135112]
+Pos=45,13
+Size=539,444
+Collapsed=0
+
+[Window][file browser##filebrowser_1592406955304]
+Pos=-1,18
+Size=700,437
+Collapsed=0
+
