[Raycst-21] Verify Successful Reads and Writes

--- a/Raycaster/imgui.ini
+++ b/Raycaster/imgui.ini
@@ -24,7 +24,7 @@ Size=137,54
 Collapsed=0
 
 [Window][New HLVL]
-Pos=114,11
+Pos=145,9
 Size=153,79
 Collapsed=0
 
@@ -56,5 +56,35 @@ Collapsed=0
 [Window][file browser##filebrowser_1592406955304]
 Pos=-1,18
 Size=700,437
+Collapsed=0
+
+[Window][file browser##filebrowser_2572831626112]
+Pos=0,16
+Size=700,450
+Collapsed=0
+
+[Window][file browser##filebrowser_1882092500992]
+Pos=7,4
+Size=700,450
+Collapsed=0
+
+[Window][file browser##filebrowser_2894415213648]
+Pos=12,6
+Size=700,450
+Collapsed=0
+
+[Window][file browser##filebrowser_2115973713440]
+Pos=-2,13
+Size=700,450
+Collapsed=0
+
+[Window][file browser##filebrowser_1760683280384]
+Pos=-30,15
+Size=700,450
+Collapsed=0
+
+[Window][file browser##filebrowser_2053188396032]
+Pos=-30,15
+Size=700,450
 Collapsed=0
 
