[Raycst-21] Switch between active hlvl file

--- a/Raycaster/imgui.ini
+++ b/Raycaster/imgui.ini
@@ -19,12 +19,12 @@ Size=198,71
 Collapsed=0
 
 [Window][Editor]
-Pos=3,9
+Pos=10,12
 Size=137,54
 Collapsed=0
 
 [Window][New HLVL]
-Pos=145,9
+Pos=195,161
 Size=153,79
 Collapsed=0
 
@@ -84,6 +84,16 @@ Size=700,450
 Collapsed=0
 
 [Window][file browser##filebrowser_2053188396032]
+Pos=-30,15
+Size=700,450
+Collapsed=0
+
+[Window][Save]
+Pos=358,203
+Size=196,71
+Collapsed=0
+
+[Window][file browser##filebrowser_2868576375648]
 Pos=-30,15
 Size=700,450
 Collapsed=0
