--- a/Raycaster/imgui.ini
+++ b/Raycaster/imgui.ini
@@ -19,8 +19,8 @@ Size=198,71
 Collapsed=0
 
 [Window][Editor]
-Pos=7,28
-Size=223,328
+Pos=50,-11
+Size=429,463
 Collapsed=0
 
 [Window][New HLVL]
@@ -94,6 +94,21 @@ Size=196,71
 Collapsed=0
 
 [Window][file browser##filebrowser_2868576375648]
+Pos=-30,15
+Size=700,450
+Collapsed=0
+
+[Window][file browser##filebrowser_2477028481528]
+Pos=-30,15
+Size=700,450
+Collapsed=0
+
+[Window][file browser##filebrowser_2460452785248]
+Pos=33,13
+Size=547,450
+Collapsed=0
+
+[Window][file browser##filebrowser_2636400026656]
 Pos=-30,15
 Size=700,450
 Collapsed=0
