[Raycst-15] Store Textures as Texture2D
Previously textures were stored as SDL_Texture*

--- a/Raycaster/imgui.ini
+++ b/Raycaster/imgui.ini
@@ -19,8 +19,8 @@ Size=198,71
 Collapsed=0
 
 [Window][Editor]
-Pos=50,-11
-Size=429,463
+Pos=7,5
+Size=435,463
 Collapsed=0
 
 [Window][New HLVL]
@@ -109,6 +109,21 @@ Size=547,450
 Collapsed=0
 
 [Window][file browser##filebrowser_2636400026656]
+Pos=-30,15
+Size=700,450
+Collapsed=0
+
+[Window][file browser##filebrowser_2389145884280]
+Pos=-30,15
+Size=700,450
+Collapsed=0
+
+[Window][file browser##filebrowser_1329690257400]
+Pos=-30,15
+Size=700,450
+Collapsed=0
+
+[Window][file browser##filebrowser_2130280110488]
 Pos=-30,15
 Size=700,450
 Collapsed=0
