--- a/Raycaster/imgui.ini
+++ b/Raycaster/imgui.ini
@@ -19,9 +19,10 @@ Size=198,71
 Collapsed=0
 
 [Window][Editor]
-Pos=1,0
-Size=435,1036
+Pos=0,0
+Size=411,1009
 Collapsed=0
+DockId=0x00000001
 
 [Window][New HLVL]
 Pos=195,161
@@ -127,4 +128,27 @@ Collapsed=0
 Pos=-30,15
 Size=700,450
 Collapsed=0
+
+[Window][Viewport]
+Pos=413,0
+Size=1507,1009
+Collapsed=0
+DockId=0x00000003
+
+[Window][DockSpace]
+Pos=0,0
+Size=1920,1009
+Collapsed=0
+
+[Window][Properties]
+Pos=512,8
+Size=120,464
+Collapsed=0
+
+[Docking][Data]
+DockSpace     ID=0x3A6D4EE5 Window=0x3DA2F1DE Pos=0,0 Size=1920,1009 Split=X
+  DockNode    ID=0x00000001 Parent=0x3A6D4EE5 SizeRef=411,480 Selected=0xDF0EC458
+  DockNode    ID=0x00000002 Parent=0x3A6D4EE5 SizeRef=1507,480 Split=X
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=357,480 CentralNode=1 Selected=0xC450F867
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=120,480
 
