[Raycst-33] Cleaned up Viewport Rendering

--- a/Raycaster/imgui.ini
+++ b/Raycaster/imgui.ini
@@ -20,12 +20,12 @@ Collapsed=0
 
 [Window][Editor]
 Pos=0,0
-Size=319,720
+Size=418,720
 Collapsed=0
 DockId=0x00000001
 
 [Window][New HLVL]
-Pos=195,161
+Pos=317,142
 Size=153,79
 Collapsed=0
 
@@ -130,8 +130,8 @@ Size=700,450
 Collapsed=0
 
 [Window][Viewport]
-Pos=321,0
-Size=959,720
+Pos=420,0
+Size=860,720
 Collapsed=0
 DockId=0x00000003
 
@@ -145,10 +145,20 @@ Pos=512,8
 Size=120,464
 Collapsed=0
 
+[Window][Unsaved Changes]
+Pos=60,60
+Size=196,71
+Collapsed=0
+
+[Window][file browser##filebrowser_2506341314448]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
 [Docking][Data]
 DockSpace     ID=0x3A6D4EE5 Window=0x3DA2F1DE Pos=0,0 Size=1280,720 Split=X
-  DockNode    ID=0x00000001 Parent=0x3A6D4EE5 SizeRef=319,720 Selected=0xDF0EC458
-  DockNode    ID=0x00000002 Parent=0x3A6D4EE5 SizeRef=959,720 Split=X
+  DockNode    ID=0x00000001 Parent=0x3A6D4EE5 SizeRef=418,720 Selected=0xDF0EC458
+  DockNode    ID=0x00000002 Parent=0x3A6D4EE5 SizeRef=860,720 Split=X
     DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=717,720 CentralNode=1 Selected=0xC450F867
     DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=240,720
 
