--- a/Raycaster/Raycaster.vcxproj
+++ b/Raycaster/Raycaster.vcxproj
@@ -162,6 +162,7 @@
     <ClInclude Include="..\External Libraries\imgui\imstb_rectpack.h" />
     <ClInclude Include="..\External Libraries\imgui\imstb_textedit.h" />
     <ClInclude Include="..\External Libraries\imgui\imstb_truetype.h" />
+    <ClInclude Include="BenchMarkTimer.h" />
     <ClInclude Include="Collisions.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Level1.h" />
