--- a/Raycaster/imgui.ini
+++ b/Raycaster/imgui.ini
@@ -19,9 +19,10 @@ Size=198,71
 Collapsed=0
 
 [Window][Editor]
-Pos=12,2
-Size=432,720
+Pos=0,0
+Size=411,720
 Collapsed=0
+DockId=0x00000001
 
 [Window][New HLVL]
 Pos=317,142
@@ -129,12 +130,13 @@ Size=700,450
 Collapsed=0
 
 [Window][Viewport]
-Pos=321,0
-Size=959,720
+Pos=413,0
+Size=867,720
 Collapsed=0
 DockId=0x00000003
 
 [Window][DockSpace]
+Pos=0,0
 Size=1280,720
 Collapsed=0
 
@@ -154,7 +156,9 @@ Size=700,450
 Collapsed=0
 
 [Docking][Data]
-DockSpace   ID=0x3A6D4EE5 Pos=0,0 Size=1280,720 Split=X
-  DockNode  ID=0x00000003 Parent=0x3A6D4EE5 SizeRef=717,720 CentralNode=1
-  DockNode  ID=0x00000004 Parent=0x3A6D4EE5 SizeRef=240,720
+DockSpace     ID=0x3A6D4EE5 Window=0x3DA2F1DE Pos=0,0 Size=1280,720 Split=X
+  DockNode    ID=0x00000001 Parent=0x3A6D4EE5 SizeRef=411,720 Selected=0xDF0EC458
+  DockNode    ID=0x00000002 Parent=0x3A6D4EE5 SizeRef=867,720 Split=X
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=717,720 CentralNode=1 Selected=0xC450F867
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=240,720
 
