[Raycst-16] User cam add new textures

--- a/Raycaster/imgui.ini
+++ b/Raycaster/imgui.ini
@@ -169,6 +169,26 @@ Pos=290,135
 Size=700,450
 Collapsed=0
 
+[Window][file browser##filebrowser_2690631804896]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][file browser##filebrowser_3208640957792]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][file browser##filebrowser_3221689123696]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][file browser##filebrowser_1426967297040]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
 [Docking][Data]
 DockSpace     ID=0x3A6D4EE5 Window=0x3DA2F1DE Pos=0,0 Size=1280,720 Split=X
   DockNode    ID=0x00000001 Parent=0x3A6D4EE5 SizeRef=319,720 Selected=0xDF0EC458
