--- a/Raycaster/imgui.ini
+++ b/Raycaster/imgui.ini
@@ -20,13 +20,14 @@ Collapsed=0
 
 [Window][Editor]
 Pos=0,0
-Size=415,697
+Size=415,720
 Collapsed=0
 DockId=0x00000001
 
 [Window][New HLVL]
+Pos=-37,678
 Size=1280,78
-Collapsed=0
+Collapsed=1
 
 [Window][file browser##filebrowser_140695761153360]
 Pos=4,15
@@ -130,13 +131,13 @@ Collapsed=0
 
 [Window][Viewport]
 Pos=417,0
-Size=949,697
+Size=863,720
 Collapsed=0
 DockId=0x00000003
 
 [Window][DockSpace]
 Pos=0,0
-Size=1366,697
+Size=1280,720
 Collapsed=0
 
 [Window][Properties]
@@ -189,8 +190,23 @@ Pos=290,135
 Size=700,450
 Collapsed=0
 
+[Window][file browser##filebrowser_1689274178824]
+Pos=610,279
+Size=700,450
+Collapsed=0
+
+[Window][file browser##filebrowser_2600596410600]
+Pos=610,279
+Size=700,450
+Collapsed=0
+
+[Window][file browser##filebrowser_2198108480568]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
 [Docking][Data]
-DockSpace     ID=0x3A6D4EE5 Window=0x3DA2F1DE Pos=0,0 Size=1366,697 Split=X
+DockSpace     ID=0x3A6D4EE5 Window=0x3DA2F1DE Pos=0,0 Size=1280,720 Split=X
   DockNode    ID=0x00000001 Parent=0x3A6D4EE5 SizeRef=415,720 Selected=0xDF0EC458
   DockNode    ID=0x00000002 Parent=0x3A6D4EE5 SizeRef=863,720 Split=X
     DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=645,720 CentralNode=1 Selected=0xC450F867
